Fix CI failure caused by wrong scalastyle configuration